--- a/index.html
+++ b/index.html
@@ -297,15 +297,8 @@
         2px 2px 3px -1px rgba(0,0,0,0.20);
     }
 
-    /* Zahlen bleiben zwar strukturell vorhanden, aber wir zeigen sie nicht */
-    .slot .num{
-      position:absolute;
-      inset:0;
-      display:none; /* <<< keine Zahlen anzeigen */
-      align-items:center;
-      justify-content:center;
-      user-select:none;
-    }
+    /* Zahlen komplett aus */
+    .slot .num{ display:none; }
 
     /* Slots relativ zur Würfel-Position + je Quadrant richtig */
     .slot-2c{ left: calc(var(--cube-x) + var(--h-x1) * var(--step)); top: calc(var(--cube-y) + var(--h-edge) * var(--step)); }
@@ -355,7 +348,7 @@
       pointer-events:none;
     }
 
-    /* Zwischenbild: 2 Würfelflächen als EIN verbundenes Bild */
+    /* Zwischenbild (W1 + Spiegel-W1) als EIN verbundenes Bild */
     .kippMid{
       position:absolute;
       display:flex;
@@ -374,7 +367,7 @@
       top: 0;
     }
     .kippMid .face.mirror .cube{
-      transform: scaleX(-1); /* Spiegelung um senkrechte Achse */
+      transform: scaleX(-1);
       transform-origin: 50% 50%;
     }
   </style>
@@ -395,11 +388,10 @@
 
       <div class="cube" aria-label="Würfel"></div>
 
-      <!-- Slots bleiben als Optik (leer), Zahlen sind deaktiviert -->
-      <div class="slot slot-2c" data-slot="F3" aria-label="Slot F3"><div class="num"><span></span></div></div>
-      <div class="slot slot-2d" data-slot="F4" aria-label="Slot F4"><div class="num"><span></span></div></div>
-      <div class="slot slot-3b" data-slot="F2" aria-label="Slot F2"><div class="num"><span></span></div></div>
-      <div class="slot slot-4b" data-slot="F1" aria-label="Slot F1"><div class="num"><span></span></div></div>
+      <div class="slot slot-2c" aria-hidden="true"></div>
+      <div class="slot slot-2d" aria-hidden="true"></div>
+      <div class="slot slot-3b" aria-hidden="true"></div>
+      <div class="slot slot-4b" aria-hidden="true"></div>
     </div>
 
     <div class="controls">
@@ -414,7 +406,6 @@
 
     const cubeEl = document.querySelector(".cube");
     const cubeShadowEl = document.querySelector(".cubeShadow");
-
     const slotEls = Array.from(document.querySelectorAll(".slot"));
 
     function setBoardSquare(){
@@ -454,9 +445,7 @@
           const cell = document.createElement("div");
           cell.className = "cell";
           const coord = key(r, cols[c]);
-          if(colorMap.has(coord)){
-            cell.classList.add(colorMap.get(coord));
-          }
+          if(colorMap.has(coord)) cell.classList.add(colorMap.get(coord));
           grid.appendChild(cell);
         }
       }
@@ -483,20 +472,6 @@
 
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
-    // ---------- Messwerte ----------
-    function getPxVar(name){
-      const v = getComputedStyle(boardEl).getPropertyValue(name).trim();
-      return parseFloat(v) || 0;
-    }
-    function cubeSizePx(){
-      const cell = getPxVar("--cell");
-      const gap  = getPxVar("--cell-gap");
-      return 3 * cell + 2 * gap;
-    }
-    function posForQ(q){
-      const step = getPxVar("--step");
-      return { left: Q[q].col * step, top: Q[q].row * step };
-    }
     function directionForClockwise(fromQ, toQ){
       if (fromQ === 0 && toQ === 1) return "Right";
       if (fromQ === 1 && toQ === 2) return "Down";
@@ -505,9 +480,31 @@
       return "Right";
     }
 
-    // ---------- Zwischenbild: W1 + Spiegel(W1) als EIN Bild, dann 50% quetschen ----------
+    // ✅ RICHTIGE Pixel-Messung (kein Custom-Property-parseFloat)
+    function measurePx(){
+      const boardW = boardEl.getBoundingClientRect().width;
+
+      // gap vom Grid ist ein echter berechneter Pixelwert
+      const gapStr = getComputedStyle(grid).gap;   // z.B. "8px"
+      const gap = parseFloat(gapStr) || 0;
+
+      const cell = (boardW - 7 * gap) / 8;
+      const step = cell + gap;
+      const cube = 3 * cell + 2 * gap;
+
+      const midX = 4 * step;
+      const midY = 4 * step;
+
+      return { gap, cell, step, cube, midX, midY };
+    }
+
+    function posForQ(q, step){
+      return { left: Q[q].col * step, top: Q[q].row * step };
+    }
+
     function makeBlankCubeClone(){
       const c = cubeEl.cloneNode(true);
+      // WICHTIG: unabhängig von --cube-x/--cube-y machen
       c.style.left = "0px";
       c.style.top  = "0px";
       c.style.opacity = "1";
@@ -515,7 +512,6 @@
     }
 
     async function showIntermediateStatic(fromQ, toQ, ms){
-      // Originale unsichtbar (damit nur das Zwischenbild zählt)
       const prevCubeOpacity = cubeEl.style.opacity;
       const prevShadowOpacity = cubeShadowEl.style.opacity;
       const prevSlotOpacity = slotEls.map(s => s.style.opacity);
@@ -528,17 +524,12 @@
       overlay.className = "kippOverlay";
       boardEl.appendChild(overlay);
 
-      const size = cubeSizePx();
-      const step = getPxVar("--step");
+      const { step, cube: size, midX, midY } = measurePx();
       const dir  = directionForClockwise(fromQ, toQ);
 
-      // Mittellinien im 8×8 (zwischen 4 und 5)
-      const midX = 4 * step;
-      const midY = 4 * step;
+      const pFrom = posForQ(fromQ, step);
 
-      const pFrom = posForQ(fromQ);
-
-      // Verbundbild (W1 links, W2 rechts = Spiegel von W1)
+      // Verbundbild: links W1, rechts Spiegel(W1)
       const mid = document.createElement("div");
       mid.className = "kippMid";
       mid.style.width  = (2 * size) + "px";
@@ -559,17 +550,16 @@
       mid.appendChild(leftFace);
       mid.appendChild(rightFace);
 
-      // Position + Quetschen: an die Mittelachse ziehen, dann 50% in Kipprichtung
+      // Position + 50% Quetschung
       if (dir === "Right" || dir === "Left"){
-        // Gruppe symmetrisch an vertikale Mittelachse (zwei Würfelflächen nebeneinander)
+        // symmetrisch an vertikale Mittelachse
         mid.style.left = (midX - size) + "px";
         mid.style.top  = pFrom.top + "px";
         mid.style.transform = "scaleX(0.5)";
       } else {
-        // Für Up/Down: selbes Prinzip, nur in Y quetschen und an horizontale Achse setzen
-        // (W1+Spiegel bleibt als „verbundene Ansicht“, ohne Verdrehung – so wie du’s wolltest)
+        // symmetrisch an horizontale Mittelachse
         mid.style.left = pFrom.left + "px";
-        mid.style.top  = (midY - (size / 2)) + "px"; // leicht zentriert um die Achse
+        mid.style.top  = (midY - (size / 2)) + "px";
         mid.style.transform = "scaleY(0.5)";
       }
 
@@ -578,13 +568,11 @@
       await sleep(ms);
       overlay.remove();
 
-      // Originale wieder sichtbar
       cubeEl.style.opacity = prevCubeOpacity || "";
       cubeShadowEl.style.opacity = prevShadowOpacity || "";
       slotEls.forEach((s, i) => s.style.opacity = prevSlotOpacity[i] || "");
     }
 
-    // ---------- Ablauf: nur Zwischenbild ----------
     let busy = false;
 
     async function run(){
@@ -594,10 +582,8 @@
 
       const nextQ = (currentQ + 1) % 4;
 
-      // 5 Sekunden Zwischenbild zeigen
       await showIntermediateStatic(currentQ, nextQ, 5000);
 
-      // Danach ins nächste Quadrant „Endbild“ (leer)
       applyQuadrant(nextQ);
 
       btn.disabled = false;
@@ -606,14 +592,12 @@
 
     btn.addEventListener("click", run);
 
-    // Init
     window.addEventListener("load", () => {
       setBoardSquare();
       requestAnimationFrame(setBoardSquare);
       setTimeout(setBoardSquare, 80);
 
       buildGridOnce();
-
       applyQuadrant(Math.floor(Math.random() * 4));
     });
 
