--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KIPP – Zwischenbild (ohne Zahlen)</title>
+  <title>KIPP – Schritt 1 (W1 in sich gespiegelt)</title>
 
   <style>
     :root{
@@ -30,10 +30,6 @@
       --board-border: 4px;
       --board-border-color: #000;
       --board-radius: clamp(14px, 2.2vmin, 22px);
-
-      --btn-bg: #ead7be;
-      --btn-text: #2a160c;
-      --btn-border: rgba(0,0,0,0.35);
     }
 
     html, body { height: 100%; }
@@ -89,58 +85,24 @@
 
       overflow: visible;
 
-      /* Zellmaß als Variable */
+      /* Zellmaß */
       --cell: calc((100% - 7 * var(--cell-gap)) / 8);
       --step: calc(var(--cell) + var(--cell-gap));
 
-      /* Würfel darf NUR hier hin */
+      /* W1 Position fix Q0 */
       --cube-col: 1;
       --cube-row: 1;
 
       --cube-x: calc(var(--cube-col) * var(--step));
       --cube-y: calc(var(--cube-row) * var(--step));
 
-      /* Cast-Shadow Offset (je Quadrant Richtung Mitte) */
+      /* Schatten (wie gehabt) */
       --cast-x: 18px;
       --cast-y: 18px;
 
       box-shadow:
         10px 18px 42px rgba(0,0,0,0.55),
         3px 6px 16px rgba(0,0,0,0.35);
-
-      /* Slot-Ausrichtung (Defaults für q0) */
-      --h-edge: 0;
-      --v-edge: 0;
-      --h-x1: 1;
-      --h-x2: 2;
-      --v-y1: 1;
-      --v-y2: 2;
-    }
-
-    /* Quadranten */
-    .board.q0{
-      --cast-x: 18px;  --cast-y: 18px;
-      --h-edge: 0; --v-edge: 0;
-      --h-x1: 1; --h-x2: 2;
-      --v-y1: 1; --v-y2: 2;
-    }
-    .board.q1{
-      --cast-x: -18px; --cast-y: 18px;
-      --h-edge: 0; --v-edge: 2;
-      --h-x1: 0; --h-x2: 1;
-      --v-y1: 1; --v-y2: 2;
-    }
-    .board.q2{
-      --cast-x: -18px; --cast-y: -18px;
-      --h-edge: 2; --v-edge: 2;
-      --h-x1: 0; --h-x2: 1;
-      --v-y1: 0; --v-y2: 1;
-    }
-    .board.q3{
-      --cast-x: 18px;  --cast-y: -18px;
-      --h-edge: 2; --v-edge: 0;
-      --h-x1: 1; --h-x2: 2;
-      --v-y1: 0; --v-y2: 1;
     }
 
     .grid{
@@ -178,7 +140,6 @@
         linear-gradient(135deg, rgba(255,255,255,0.18), rgba(0,0,0,0.06)),
         var(--floor);
 
-      border-radius: 0;
       z-index: 2;
       pointer-events: none;
 
@@ -197,12 +158,7 @@
       inset:0;
       z-index: 3;
       pointer-events:none;
-      clip-path: inset(
-        var(--step)
-        var(--step)
-        var(--step)
-        var(--step)
-      );
+      clip-path: inset(var(--step) var(--step) var(--step) var(--step));
     }
 
     .cubeShadow{
@@ -241,13 +197,28 @@
       pointer-events: none;
     }
 
-    .cube{
+    /* ===== W1-Gruppe (Würfel + Plättchen) ===== */
+    .w1{
       position:absolute;
       left: var(--cube-x);
       top:  var(--cube-y);
-
       width: calc(3 * var(--cell) + 2 * var(--cell-gap));
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      z-index: 5;
+      pointer-events:none;
+
+      /* ✅ Schritt 1: Spiegelung an der EIGENEN senkrechten Mittelachse */
+      transform: scaleX(-1);
+      transform-origin: 50% 50%;
+    }
+
+    .cube{
+      position:absolute;
+      left: 0;
+      top: 0;
+
+      width: 100%;
+      height: 100%;
       box-sizing: border-box;
 
       background:
@@ -269,9 +240,6 @@
       box-shadow:
         0 12px 22px rgba(0,0,0,0.28),
         0 0 0 1px rgba(255,255,255,0.10) inset;
-
-      z-index: 5;
-      pointer-events: none;
     }
 
     .slot{
@@ -287,9 +255,6 @@
       border: var(--slot-border-w) solid var(--slot-border);
       border-radius: var(--cell-radius);
 
-      z-index: 7;
-      pointer-events: none;
-
       box-shadow:
         1px 1px 0 rgba(255,255,255,0.18) inset,
         -1px -1px 0 rgba(0,0,0,0.08) inset,
@@ -297,85 +262,17 @@
         2px 2px 3px -1px rgba(0,0,0,0.20);
     }
 
-    /* Zahlen komplett aus */
-    .slot .num{ display:none; }
-
-    /* Slots relativ zur Würfel-Position + je Quadrant richtig */
-    .slot-2c{ left: calc(var(--cube-x) + var(--h-x1) * var(--step)); top: calc(var(--cube-y) + var(--h-edge) * var(--step)); }
-    .slot-2d{ left: calc(var(--cube-x) + var(--h-x2) * var(--step)); top: calc(var(--cube-y) + var(--h-edge) * var(--step)); }
-    .slot-3b{ left: calc(var(--cube-x) + var(--v-edge) * var(--step)); top: calc(var(--cube-y) + var(--v-y1) * var(--step)); }
-    .slot-4b{ left: calc(var(--cube-x) + var(--v-edge) * var(--step)); top: calc(var(--cube-y) + var(--v-y2) * var(--step)); }
-
-    .controls{
-      width: 100%;
-      display:flex;
-      justify-content:center;
-      padding: 0 6px;
-      margin-top: 18px;
-    }
-
-    .btn{
-      border: 1px solid var(--btn-border);
-      background: var(--btn-bg);
-      color: var(--btn-text);
-      font-weight: 900;
-      letter-spacing: 0.06em;
-      text-transform: uppercase;
-      padding: 12px 16px;
-      border-radius: 14px;
-      cursor: pointer;
-      box-shadow:
-        0 10px 18px rgba(0,0,0,0.25),
-        0 0 0 1px rgba(255,255,255,0.15) inset;
-      user-select: none;
-      -webkit-tap-highlight-color: transparent;
-    }
-    .btn:active{
-      transform: translateY(1px) scale(0.99);
-      filter: brightness(0.97);
-    }
-    .btn[disabled]{
-      opacity: 0.65;
-      cursor: default;
-      transform: none;
-    }
-
-    /* Overlay-Layer für Zwischenbild */
-    .kippOverlay{
-      position:absolute;
-      inset:0;
-      z-index: 50;
-      pointer-events:none;
-    }
-
-    /* Zwischenbild (W1 + Spiegel-W1) als EIN verbundenes Bild */
-    .kippMid{
-      position:absolute;
-      display:flex;
-      pointer-events:none;
-      z-index: 51;
-      transform-origin: 50% 50%;
-    }
-    .kippMid .face{
-      position:relative;
-      width: 50%;
-      height: 100%;
-    }
-    .kippMid .face .cube{
-      position:absolute;
-      left: 0;
-      top: 0;
-    }
-    .kippMid .face.mirror .cube{
-      transform: scaleX(-1);
-      transform-origin: 50% 50%;
-    }
+    /* Slots relativ in der W1-Gruppe (wie Q0) */
+    .slot-2c{ left: calc(1 * var(--step)); top: calc(0 * var(--step)); }
+    .slot-2d{ left: calc(2 * var(--step)); top: calc(0 * var(--step)); }
+    .slot-3b{ left: calc(0 * var(--step)); top: calc(1 * var(--step)); }
+    .slot-4b{ left: calc(0 * var(--step)); top: calc(2 * var(--step)); }
   </style>
 </head>
 
 <body>
   <div class="stage">
-    <div class="board q0" id="board">
+    <div class="board" id="board">
       <div class="floor" aria-hidden="true"></div>
 
       <div class="shadowLayer" aria-hidden="true">
@@ -386,27 +283,20 @@
 
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-      <div class="cube" aria-label="Würfel"></div>
-
-      <div class="slot slot-2c" aria-hidden="true"></div>
-      <div class="slot slot-2d" aria-hidden="true"></div>
-      <div class="slot slot-3b" aria-hidden="true"></div>
-      <div class="slot slot-4b" aria-hidden="true"></div>
-    </div>
-
-    <div class="controls">
-      <button id="btnBestuecken" class="btn">Zwischenschritt zeigen</button>
+      <!-- ✅ W1 (gespiegelt in sich selbst) -->
+      <div class="w1" aria-label="W1 gespiegelt">
+        <div class="cube" aria-hidden="true"></div>
+        <div class="slot slot-2c" aria-hidden="true"></div>
+        <div class="slot slot-2d" aria-hidden="true"></div>
+        <div class="slot slot-3b" aria-hidden="true"></div>
+        <div class="slot slot-4b" aria-hidden="true"></div>
+      </div>
     </div>
   </div>
 
   <script>
     const boardEl = document.getElementById("board");
     const grid = document.getElementById("grid");
-    const btn = document.getElementById("btnBestuecken");
-
-    const cubeEl = document.querySelector(".cube");
-    const cubeShadowEl = document.querySelector(".cubeShadow");
-    const slotEls = Array.from(document.querySelectorAll(".slot"));
 
     function setBoardSquare(){
       const w = Math.round(boardEl.getBoundingClientRect().width);
@@ -452,159 +342,20 @@
       grid.dataset.built = "1";
     }
 
-    // Quadranten
-    const Q = [
-      { cls: "q0", col: 1, row: 1 }, // oben links
-      { cls: "q1", col: 4, row: 1 }, // oben rechts
-      { cls: "q2", col: 4, row: 4 }, // unten rechts
-      { cls: "q3", col: 1, row: 4 }, // unten links
-    ];
-
-    let currentQ = 0;
-
-    function applyQuadrant(q){
-      currentQ = q;
-      boardEl.classList.remove("q0","q1","q2","q3");
-      boardEl.classList.add(Q[q].cls);
-      boardEl.style.setProperty("--cube-col", String(Q[q].col));
-      boardEl.style.setProperty("--cube-row", String(Q[q].row));
-    }
-
-    function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
-
-    function directionForClockwise(fromQ, toQ){
-      if (fromQ === 0 && toQ === 1) return "Right";
-      if (fromQ === 1 && toQ === 2) return "Down";
-      if (fromQ === 2 && toQ === 3) return "Left";
-      if (fromQ === 3 && toQ === 0) return "Up";
-      return "Right";
-    }
-
-    // ✅ RICHTIGE Pixel-Messung (kein Custom-Property-parseFloat)
-    function measurePx(){
-      const boardW = boardEl.getBoundingClientRect().width;
-
-      // gap vom Grid ist ein echter berechneter Pixelwert
-      const gapStr = getComputedStyle(grid).gap;   // z.B. "8px"
-      const gap = parseFloat(gapStr) || 0;
-
-      const cell = (boardW - 7 * gap) / 8;
-      const step = cell + gap;
-      const cube = 3 * cell + 2 * gap;
-
-      const midX = 4 * step;
-      const midY = 4 * step;
-
-      return { gap, cell, step, cube, midX, midY };
-    }
-
-    function posForQ(q, step){
-      return { left: Q[q].col * step, top: Q[q].row * step };
-    }
-
-    function makeBlankCubeClone(){
-      const c = cubeEl.cloneNode(true);
-      // WICHTIG: unabhängig von --cube-x/--cube-y machen
-      c.style.left = "0px";
-      c.style.top  = "0px";
-      c.style.opacity = "1";
-      return c;
-    }
-
-    async function showIntermediateStatic(fromQ, toQ, ms){
-      const prevCubeOpacity = cubeEl.style.opacity;
-      const prevShadowOpacity = cubeShadowEl.style.opacity;
-      const prevSlotOpacity = slotEls.map(s => s.style.opacity);
-
-      cubeEl.style.opacity = "0";
-      cubeShadowEl.style.opacity = "0";
-      slotEls.forEach(s => s.style.opacity = "0");
-
-      const overlay = document.createElement("div");
-      overlay.className = "kippOverlay";
-      boardEl.appendChild(overlay);
-
-      const { step, cube: size, midX, midY } = measurePx();
-      const dir  = directionForClockwise(fromQ, toQ);
-
-      const pFrom = posForQ(fromQ, step);
-
-      // Verbundbild: links W1, rechts Spiegel(W1)
-      const mid = document.createElement("div");
-      mid.className = "kippMid";
-      mid.style.width  = (2 * size) + "px";
-      mid.style.height = size + "px";
-
-      const leftFace = document.createElement("div");
-      leftFace.className = "face";
-      leftFace.style.width  = size + "px";
-      leftFace.style.height = size + "px";
-      leftFace.appendChild(makeBlankCubeClone());
-
-      const rightFace = document.createElement("div");
-      rightFace.className = "face mirror";
-      rightFace.style.width  = size + "px";
-      rightFace.style.height = size + "px";
-      rightFace.appendChild(makeBlankCubeClone());
-
-      mid.appendChild(leftFace);
-      mid.appendChild(rightFace);
-
-      // Position + 50% Quetschung
-      if (dir === "Right" || dir === "Left"){
-        // symmetrisch an vertikale Mittelachse
-        mid.style.left = (midX - size) + "px";
-        mid.style.top  = pFrom.top + "px";
-        mid.style.transform = "scaleX(0.5)";
-      } else {
-        // symmetrisch an horizontale Mittelachse
-        mid.style.left = pFrom.left + "px";
-        mid.style.top  = (midY - (size / 2)) + "px";
-        mid.style.transform = "scaleY(0.5)";
-      }
-
-      overlay.appendChild(mid);
-
-      await sleep(ms);
-      overlay.remove();
-
-      cubeEl.style.opacity = prevCubeOpacity || "";
-      cubeShadowEl.style.opacity = prevShadowOpacity || "";
-      slotEls.forEach((s, i) => s.style.opacity = prevSlotOpacity[i] || "");
-    }
-
-    let busy = false;
-
-    async function run(){
-      if (busy) return;
-      busy = true;
-      btn.disabled = true;
-
-      const nextQ = (currentQ + 1) % 4;
-
-      await showIntermediateStatic(currentQ, nextQ, 5000);
-
-      applyQuadrant(nextQ);
-
-      btn.disabled = false;
-      busy = false;
-    }
-
-    btn.addEventListener("click", run);
-
     window.addEventListener("load", () => {
       setBoardSquare();
       requestAnimationFrame(setBoardSquare);
       setTimeout(setBoardSquare, 80);
-
       buildGridOnce();
-      applyQuadrant(Math.floor(Math.random() * 4));
+
+      // fix Q0
+      boardEl.style.setProperty("--cube-col", "1");
+      boardEl.style.setProperty("--cube-row", "1");
     });
 
     window.addEventListener("resize", () => {
       setBoardSquare();
       requestAnimationFrame(setBoardSquare);
-      applyQuadrant(currentQ);
     });
   </script>
 </body>
