Darstellzng gespiegelt dazu.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         3px 6px 16px rgba(0,0,0,0.35);
     }
 
-    /* Quadranten (wir bleiben jetzt fix auf q0) */
+    /* Quadranten (W1 fix auf q0) */
     .board.q0{
       --cast-x: 18px;  --cast-y: 18px;
     }
@@ -176,6 +176,7 @@
       );
     }
 
+    /* Schatten W1 (Q0) */
     .cubeShadow{
       position:absolute;
       left: var(--cube-x);
@@ -215,6 +216,40 @@
       position:absolute;
       left: var(--cube-x);
       top:  var(--cube-y);
+
+      width: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      box-sizing: border-box;
+
+      background:
+        radial-gradient(120% 90% at 15% 15%, var(--cube-wood-gold), transparent 55%),
+        radial-gradient(120% 90% at 25% 25%, var(--cube-wood-warm), transparent 60%),
+        repeating-linear-gradient(
+          20deg,
+          rgba(0,0,0,0.02) 0px,
+          rgba(0,0,0,0.02) 10px,
+          rgba(255,255,255,0.02) 10px,
+          rgba(255,255,255,0.02) 18px
+        ),
+        linear-gradient(135deg, rgba(255,255,255,0.16), rgba(0,0,0,0.08)),
+        linear-gradient(180deg, var(--cube-wood-base), var(--cube-wood-deep));
+
+      border: 4px solid var(--cube-border);
+      border-radius: clamp(10px, 2.2vmin, 18px);
+
+      box-shadow:
+        0 12px 22px rgba(0,0,0,0.28),
+        0 0 0 1px rgba(255,255,255,0.10) inset;
+
+      z-index: 5;
+      pointer-events: none;
+    }
+
+    /* ✅ Zusätzliche Würfelfläche W2 (leer, Innenrahmen), fix in Q1 */
+    .cube2{
+      position:absolute;
+      left: calc(4 * var(--step)); /* Q1: Spalte 4 */
+      top:  calc(1 * var(--step)); /* Q1: Zeile 1 */
 
       width: calc(3 * var(--cell) + 2 * var(--cell-gap));
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
@@ -295,15 +330,21 @@
     .board.q0 .slot-3d .num > span,
     .board.q0 .slot-4d .num > span { --num-rot: 90deg; }
 
-    /* ===== NEUE SLOT-POSITIONEN (Rasterlogik in der 3×3 Würfelfläche) =====
-       W1 belegt in Q0 das Raster 2B..4D.
-       Daher (relativ zur cube-x/y):
-       2B = (0,0), 2C = (1,0), 3D = (2,1), 4D = (2,2)
-    */
+    /* ===== W1 SLOT-POSITIONEN (relativ zu cube-x/y) ===== */
     .slot-2b{ left: calc(var(--cube-x) + 0 * var(--step)); top:  calc(var(--cube-y) + 0 * var(--step)); }
     .slot-2c{ left: calc(var(--cube-x) + 1 * var(--step)); top:  calc(var(--cube-y) + 0 * var(--step)); }
     .slot-3d{ left: calc(var(--cube-x) + 2 * var(--step)); top:  calc(var(--cube-y) + 1 * var(--step)); }
     .slot-4d{ left: calc(var(--cube-x) + 2 * var(--step)); top:  calc(var(--cube-y) + 2 * var(--step)); }
+
+    /* ===== W2 (Q1) SLOT-POSITIONEN: 2F,2G,3E,4E =====
+       Q1 Start links/oben ist (col=4,row=1) => leftBase=4*step, topBase=1*step
+       2E..4G in der 3×3: E=(0), F=(1), G=(2); Zeilen: 2=(0),3=(1),4=(2)
+       2F => (1,0) ; 2G => (2,0) ; 3E => (0,1) ; 4E => (0,2)
+    */
+    .slot2-2f{ left: calc(4 * var(--step) + 1 * var(--step)); top: calc(1 * var(--step) + 0 * var(--step)); }
+    .slot2-2g{ left: calc(4 * var(--step) + 2 * var(--step)); top: calc(1 * var(--step) + 0 * var(--step)); }
+    .slot2-3e{ left: calc(4 * var(--step) + 0 * var(--step)); top: calc(1 * var(--step) + 1 * var(--step)); }
+    .slot2-4e{ left: calc(4 * var(--step) + 0 * var(--step)); top: calc(1 * var(--step) + 2 * var(--step)); }
 
     /* Controls: Button weiter runter */
     .controls{
@@ -360,13 +401,23 @@
 
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
+      <!-- W1 (Q0) -->
       <div class="cube" aria-label="Würfelfläche W1"></div>
 
-      <!-- ✅ Blättchen fix: 2B, 2C, 3D, 4D -->
+      <!-- W2 (Q1) -->
+      <div class="cube2" aria-label="Würfelfläche W2 (leer)"></div>
+
+      <!-- ✅ Blättchen W1 fix: 2B, 2C, 3D, 4D -->
       <div class="slot slot-2b" data-slot="S1" aria-label="Slot 2B"><div class="num"><span></span></div></div>
       <div class="slot slot-2c" data-slot="S2" aria-label="Slot 2C"><div class="num"><span></span></div></div>
       <div class="slot slot-3d" data-slot="S3" aria-label="Slot 3D"><div class="num"><span></span></div></div>
       <div class="slot slot-4d" data-slot="S4" aria-label="Slot 4D"><div class="num"><span></span></div></div>
+
+      <!-- ✅ Blättchen W2 fix: 2F, 2G, 3E, 4E -->
+      <div class="slot slot2-2f" data-slot="T1" aria-label="Slot 2F"><div class="num"><span></span></div></div>
+      <div class="slot slot2-2g" data-slot="T2" aria-label="Slot 2G"><div class="num"><span></span></div></div>
+      <div class="slot slot2-3e" data-slot="T3" aria-label="Slot 3E"><div class="num"><span></span></div></div>
+      <div class="slot slot2-4e" data-slot="T4" aria-label="Slot 4E"><div class="num"><span></span></div></div>
     </div>
 
     <div class="controls">
@@ -428,7 +479,7 @@
       grid.dataset.built = "1";
     }
 
-    // ✅ FIX: immer Q0, kein Random mehr
+    // ✅ FIX: immer Q0, kein Random mehr (für W1); W2 ist fix in Q1
     function applyQuadrant0(){
       boardEl.classList.remove("q1","q2","q3");
       boardEl.classList.add("q0");
@@ -457,7 +508,7 @@
       return nums.slice(0,4);
     }
 
-    // ✅ NUR W1 bestücken (fürs Testen dieser 1. Darstellung)
+    // ✅ NUR W1 bestücken (wie gehabt)
     async function placeFour(numbers, tempoMs){
       const order = ["S1","S2","S3","S4"]; // 2B,2C,3D,4D
       for(let i=0;i<4;i++){
