--- a/index.html
+++ b/index.html
@@ -309,15 +309,20 @@
       justify-content:center;
       user-select:none;
     }
+
+    /* ✅ Zusatz-Rotation: standard 0deg, nur bei .flip180 = 180deg */
     .slot .num > span{
       display:inline-block;
       font-weight: 900;
       color: #111;
       font-size: clamp(18px, 4.2vmin, 36px);
       text-shadow: 0 1px 0 rgba(255,255,255,0.35);
-      transform: rotate(var(--num-rot, 0deg));
+      transform: rotate(calc(var(--num-rot, 0deg) + var(--num-extra, 0deg)));
       transform-origin: 50% 50%;
       position: relative;
+    }
+    .slot .num > span.flip180{
+      --num-extra: 180deg;
     }
 
     /* ✅ Punkt für die 9 (rechts unten) */
@@ -393,9 +398,9 @@
     }
 
     @keyframes popIn {
-      0%   { transform: rotate(var(--num-rot, 0deg)) scale(0.70); filter: brightness(1.05); }
-      60%  { transform: rotate(var(--num-rot, 0deg)) scale(1.10); }
-      100% { transform: rotate(var(--num-rot, 0deg)) scale(1.00); filter: none; }
+      0%   { transform: rotate(calc(var(--num-rot, 0deg) + var(--num-extra, 0deg))) scale(0.70); filter: brightness(1.05); }
+      60%  { transform: rotate(calc(var(--num-rot, 0deg) + var(--num-extra, 0deg))) scale(1.10); }
+      100% { transform: rotate(calc(var(--num-rot, 0deg) + var(--num-extra, 0deg))) scale(1.00); filter: none; }
     }
     .slot.pop .num > span{
       animation: popIn 220ms ease-out;
@@ -508,6 +513,13 @@
       slotEls.forEach(s => s.classList.remove("pop"));
     }
 
+    function clearFlipClasses(){
+      // ✅ nur die Zusatzklasse entfernen, damit Neu-Setzen sauber ist
+      for (const span of slotSpanEls.values()){
+        span.classList.remove("flip180");
+      }
+    }
+
     function setFixedNumbers(withPop=false){
       // W1:
       const s1 = slotSpanEls.get("S1"); // 2B
@@ -521,16 +533,22 @@
       const t3 = slotSpanEls.get("T3"); // 3E
       const t4 = slotSpanEls.get("T4"); // 4E
 
+      clearFlipClasses();
+
       // Zahlen setzen
       if (s1){ s1.textContent = "9";  s1.classList.add("n9"); }
       if (s2){ s2.textContent = "11"; s2.classList.remove("n9"); }
-      if (s3){ s3.textContent = "3";  s3.classList.remove("n9"); }
-      if (s4){ s4.textContent = "7";  s4.classList.remove("n9"); }
 
-      if (t4){ t4.textContent = "4";  t4.classList.remove("n9"); } // 4E
-      if (t3){ t3.textContent = "5";  t3.classList.remove("n9"); } // 3E
-      if (t1){ t1.textContent = "12"; t1.classList.remove("n9"); } // 2F
-      if (t2){ t2.textContent = "2";  t2.classList.remove("n9"); } // 2G
+      // ✅ 3 und 7 bekommen zusätzlich 180°
+      if (s3){ s3.textContent = "3";  s3.classList.remove("n9"); s3.classList.add("flip180"); }
+      if (s4){ s4.textContent = "7";  s4.classList.remove("n9"); s4.classList.add("flip180"); }
+
+      // ✅ 5 und 4 bekommen zusätzlich 180°
+      if (t4){ t4.textContent = "4";  t4.classList.remove("n9"); t4.classList.add("flip180"); } // 4E
+      if (t3){ t3.textContent = "5";  t3.classList.remove("n9"); t3.classList.add("flip180"); } // 3E
+
+      if (t1){ t1.textContent = "12"; t1.classList.remove("n9"); }
+      if (t2){ t2.textContent = "2";  t2.classList.remove("n9"); }
 
       if (withPop){
         for (const el of slotEls){
